minor fix: adjust z-index to restore button functionality

--- a/components/SectionIPFSCampPage.module.scss
+++ b/components/SectionIPFSCampPage.module.scss
@@ -125,6 +125,7 @@
   display: inline-block;
   margin-bottom: 2rem;
   width: 70%;
+  z-index: var(--z-index-medium);
 
   @media (max-width: 768px) {
     width: 100%;
